<resources>
    <string name="app_name">Зачёт!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Неверный логин</string>
    <string name="invalid_password">Пароль должен содержать >5 символов</string>
    <string name="login_failed">"Не удалось выполнить вход"</string>
    <string name="enter">Вход</string>
    <string name="login">Логин</string>
    <string name="loginWeb">Логин от info.swsu</string>
    <string name="password">Пароль</string>
    <string name="passwordWeb">Пароль от info.swsu</string>
    <string name="to_enter">Войти</string>
    <string name="my_grades">Мои баллы</string>
    <string name="feed">Лента</string>
    <string name="settings">Настройки</string>
    <string name="about">О приложении</string>
    <string name="to_logout">Выйти</string>
    <string name="ok">OK</string>
    <string name="cancel">Отмена</string>
    <string name="sure">Вы действительно хотите выйти?</string>
    <string name="logout_descrip">Если вы выйдете из аккаунта, вам нужно будет вводить данные для входа заново</string>
    <string name="grades_for_testing">Баллы за</string>
    <string name="additional_grades">Дополнительные баллы:</string>
    <string name="premium_grades">Премиальные баллы:</string>
    <string name="connect_with_teacher">Связаться с преподавателем</string>
    <string name="message">Сообщение</string>
    <string name="save">Сохранить</string>
    <string name="confirm">Подтвердить</string>
    <string name="chats">Чаты</string>
    <string name="schedule">Расписание</string>
    <string name="search_hint">Поиск</string>
    <string name="login_password_input">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789</string>
    <string name="login_input">abcdefghijklmnopqrstuvwxyz0123456789</string>
    <string name="name_surname_input">АБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯабвгдеёжзийклмнопрстуфхцчшщъыьэюя</string>
    <string name="version">Версия</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="cache_pics">Стараться не обновлять изображения</string>
    <string name="supportDarkThemeText">Тема устройства</string>
    <string name="language">Язык</string>
    <string name="updateText">Об изменениях можно узнать в Telegram-канале</string>
    <string name="updateTitle">Обнаружена новая версия</string>
    <string name="updateTextForced">Чтобы продолжить пользоваться приложением необходимо установить обновление</string>
    <string name="updateTitleForced">Версия устарела</string>
    <string name="new_record">Добавить запись</string>
    <string name="publish">Опубликовать</string>
    <string name="sponsored">Спонсировано</string>
    <string-array name="languages">
        <item>Русский</item>
    </string-array>
    <string-array name="fileFormat">
        <item>Отмена</item>
        <item>Изображение</item>
        <item>Файл</item>
    </string-array>
    <string name="high_week">Верхняя</string>-
    <string name="low_week">Нижняя</string>
    <string-array name="sem_nums">

    </string-array>

    <string name="check_versions">Проверить наличие обновлений</string>
    <string name="support">Поддержка приложения</string>
    <string name="our_rustore">RuStore</string>
    <string name="forgot_password">Забыли пароль?</string>


    <string name="drawer_open">Меню</string>
    <string name="drawer_closed">Меню</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="noAuthData">Не был произведен вход в аккаунт, либо данные о семестрах устарели. Пожалуйста, перейдите в настройки и подтвердите актуальные данные.</string>
    <string name="updateSemester">Обновить список семестров</string>


    <string name="updateList">
        Добавлено:\n
- Параметр в настройках, отвечающий за отключение исчезаний фотографий при каждом обновлении чата\n
- Оповещение пользователя, если интернета нет\n
- Икнока RuStore в "О приложении"\n
- Обновление баллов посредством свайпа\n
- Неделя выбирается автоматически и с отключенным интернетом\n
- Иконки в ленте\n
- Выбор стороны, откуда будет открываться меню\n
- В расписании подсвечивается текущий день недели \n
\n
Исправления и изменения:\n
- Приложение стало работать плавнее, например, загрузки окон и анимации\n
- Расширено отображение происходящих загрузок\n
- Больше нельзя перейти в другой семестр, если баллы этого не загружены\n
- Убрано пустое активное поле в меню\n
- Лента "двигется" автоматически вверх, если пользователь в самом вверху ленты\n
- Чат "двигется" автоматически вниз, если пользователь в самом внизу чата\n
- Ошибка с автоматической подгрузкой из google account логина и пароля не в те поля\n
- Исправлены случайные вылеты из аккаунта\n
- Обновлена проверка версий\n
- Увеличен ввод пароля до 50 символов\n
- Больше нельзя задать пустой пароль\n
- Закрытие добавления поста по всей области верхней границы\n
- Открытие меню по всей области верхней границы\n
- Возврат из чата по всей области верхней границы\n
- Уменьшены размеры меню\n
- Убран баг с исчезанием имени собеседника отправившего фотографию\n
- Исправлены известные ошибки при отображении сообщений\n
\n
Другое:\n
- Множество внутренних изменений и исправлений\n
    </string>


    <string name="getUser">getUser</string>

    (Для sharedPref)
    <string name="settingsShared">Settings</string> обращение к shared настройкам
    <string name="gradesShared">Grades</string> обращение к shared баллам
    <string name="loginWebShared">loginWeb</string> логин пользователя в info.swsu
    <string name="passwordWebShared">passwordWeb</string> пароль пользователя в info.swsu
    <string name="listOfSemester">listOfSemester</string> список семестров пользователя
    <string name="listOfSemesterToChange">listOfSemesterToChange</string> список семестров пользователя измененные
    <string name="versionShared">version</string> нынешняя версия приложения
    <string name="groupOfStudent">groupOfStudent</string> группа пользователя
    <string name="formOfStudent">formOfStudent</string> форма обучения пользователя
    <string name="lastSemester">lastSemester</string> последний доступный семестр на info.swsu
    <string name="checkLogin">checkLogin</string> проверка авторизации (true - если авторизован)
    <string name="checkSettings">check_settings</string> скорее всего, как и сверху
    <string name="isDownWeek">isDownWeek</string> скорее всего, как и сверху
    <string name="savePassword">save_password</string>
    <string name="uid">uid</string>
    <string name="scheduleSharedup">scheduleUp</string>
    <string name="scheduleShareddown">scheduleDown</string>
    <string name="groupSharedup">groupUp</string>
    <string name="groupShareddown">groupDown</string>
    <string name="emailShared">email</string>
    <string name="groupSpinner">groupSpinner</string>
    <string name="isTeacher">isTeacher</string>
    <string name="actualGrades">actualGrades</string> собирает баллы за последний семестр
    <string name="loginShared">login</string>
    <string name="darkThemeShared">darkThemeShared</string>
    <string name="loadImages">loadImages</string>
    // Light - светлая всегда
    // Auto - как на устройстве
    // Night - темная всегда
    (конец для sharedPref)


    <string name="loadFromServerWeb">Загрузить с сервера</string>
    <string name="saveOnServerWeb">Сохранить на сервере</string>
    <string name="email">Электронная почта</string>
    <string name="registration">Регистрация</string>
    <string name="registerOffer">Нет аккаунта? Зарегистрироваться</string>
    <string name="code">Код</string>
    <string name="to_register">Зарегистрироваться</string>
    <string name="change_password">Смена пароля</string>
    <string name="change_email">Поменять адрес электронной почты</string>
    <string name="github">GitHub</string>
    <string name="telegram">Telegram</string>
    <string name="nameStepan">Немченко Степан</string>
    <string name="nameSofia">Сохина Софья</string>
    <string name="zero">0</string>
    <string name="onlyDarkTheme">Принудительная тёмная тема</string>
    <string name="menuIsRight">menuIsRight</string>
    <string name="menuMove">Меню справа</string>
    <string name="localSchedule">false</string>
    <string name="scheduleSample">monday;11:40;Г-703, проф. Горюшкина Н.Е.;Информационные технологии в ресторанной деятельности (лк);13:20;Г-203а, преп. Волобуев В.В.;Ресторанное дело (пр);15:00;Г-1б, доц. Абушенкова М.В.;Управление персоналом на предприятиях гостеприимства (пр);tuesday;11:40;Г-210, доц. Алпеева Е.А.;Экономическая культура и финансовая грамотность;13:20;Г-5, доц. Соловьянова М.В.;Культура питания народов мира (лк);15:00;Г-617, доц. Абушенкова М.В.;Основы рационального питания (лб);wednesday;13:20;Г-1б, доц. Соловьянова М.В.;Культура питания народов мира (пр);15:00;Г-207б, преп. Петров А.А.;Информационные технологии в ресторанной деятельности (пр);16:50;Г-507, доц. Беспяткина Т.В.;Проектирование гостиничной деятельности (пр);thursday;13:20;ОНЛАЙН  istoria_sks@mail.ru, доц. Третьяк А.С.;Банкеты и приемы (лк);15:00;Г-7, доц. Третьяк А.С.;Проектирование гостиничной деятельности (лк);friday;13:20;Г-617/6, преп. Волобуев В.В.;Банкеты и приемы (пр);15:00;Г-617, доц. Абушенкова М.В.;Управление персоналом на предприятиях гостеприимства(лк/пр);16:50;Г-507, доц. Беспяткина Т.В.;Техника и организация ресторанного сервиса (пр);saturday;DOWN;11:40;Г-3, доц. Колупаев А.А.;Техника и организация ресторанного сервиса (лк);13:20;Г-812а, доц. Соловьянова М.В.;Основы рационального питания (лк);15:00;Г-507, доц. Беспяткина Т.В.;Техника и организация ресторанного сервиса (пр);tuesday;09:40;Г-820, доц. Третьяк А.С.;Ресторанное дело (лк);11:40;Г-717, преп. Волобуев В.В.;Ресторанное дело (пр);13:20;Г-5, доц. Абушенкова М.В.;Управление персоналом на предприятиях гостеприимства (лк);wednesday;13:20;Г-507, доц. Беспяткина Т.В.;Проектирование гостиничной деятельности (пр);15:00;ОНЛАЙН swsu_buaia@mail.ru, доц. Алпеева Е.А.;Экономическая культура и финансовая грамотность (лк);thursday;friday;13:20;Г-617/6, преп. Волобуев В.В.;Банкеты и приемы (пр);15:00;Г-617, доц. Абушенкова М.В.;Управление персоналом на предприятиях гостеприимства(лк/пр);</string>


</resources>