<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="20dp"
    android:layout_marginTop="70dp"
    android:layout_marginEnd="20dp"
    android:gravity="center|top"
    android:orientation="vertical"
    tools:context=".ui.HelpFragment">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="176dp"
        android:layout_height="160dp"
        android:src="@drawable/ic_main_icon" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:fontFamily="@font/inter"
            android:text="@string/version"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/inter"
            android:text="@string/zero"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/checkVersionsBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/inter"
        android:text="@string/check_versions"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:cornerRadius="20dp"
        app:icon="@drawable/ic_baseline_autorenew_24"
        app:iconTint="@color/black" />


    <Button
        android:id="@+id/getSupportBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/support"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp" />


    <Button
        android:id="@+id/telegramBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/telegram"
        android:textAlignment="center"
        android:textColor="#2196F3"
        app:icon="@drawable/ic___icon__telegram_"
        app:iconTint="@color/white"
        app:iconTintMode="multiply" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">


        <Button
            android:id="@+id/githubBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:text="@string/github"
            android:textAlignment="center"
            android:textColor="#2196F3"
            app:icon="@drawable/ic___icon__github_"
            app:iconTint="@color/white"
            app:iconTintMode="multiply" />

        <Button
            android:id="@+id/rustoreBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/our_rustore"
            android:textAlignment="center"
            android:textColor="#2196F3"
            app:icon="@drawable/rustore_logo_intro"
            app:iconTint="@color/white"
            app:iconTintMode="multiply" />

        <!--        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter"
            android:text="@string/nameStepan"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />-->


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:fontFamily="@font/inter"
            android:text="@string/nameStepan"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/nemGithub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/inter"
            android:text="@string/github"
            android:textColor="#2196F3"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/nemTelegram"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/inter"
            android:text="@string/telegram"
            android:textColor="#2196F3"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:fontFamily="@font/inter"
            android:text="@string/nameSofia"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/sofGithub"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/inter"
            android:text="@string/github"
            android:textColor="#2196F3"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/sofTeleram"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/inter"
            android:text="@string/telegram"
            android:textColor="#2196F3"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>